[gd_scene load_steps=12 format=2]

[ext_resource path="res://shop/ShopCardManager.gd" type="Script" id=1]
[ext_resource path="res://shop/ShopNodeManager.gd" type="Script" id=2]
[ext_resource path="res://art/skip_arrow.png" type="Texture" id=3]
[ext_resource path="res://art/dice.png" type="Texture" id=4]
[ext_resource path="res://UI/CardCostDisplay.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/CurrencyDisplay.tscn" type="PackedScene" id=6]
[ext_resource path="res://card/Card.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/GameButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://environment/ShopNode.tscn" type="PackedScene" id=9]
[ext_resource path="res://UI/Dice.gd" type="Script" id=10]
[ext_resource path="res://shop/CardShop.gd" type="Script" id=11]

[node name="CardShop" type="CanvasLayer"]
script = ExtResource( 11 )

[node name="ShopNodeManager" type="Node" parent="."]
script = ExtResource( 2 )

[node name="ShopNode" parent="ShopNodeManager" instance=ExtResource( 9 )]
position = Vector2( 128, 128 )
scale = Vector2( 0.6, 0.6 )

[node name="ShopNode2" parent="ShopNodeManager" instance=ExtResource( 9 )]
position = Vector2( 384, 128 )
scale = Vector2( 0.6, 0.6 )

[node name="ShopNode3" parent="ShopNodeManager" instance=ExtResource( 9 )]
position = Vector2( 640, 128 )
scale = Vector2( 0.6, 0.6 )

[node name="ShopNode4" parent="ShopNodeManager" instance=ExtResource( 9 )]
position = Vector2( 896, 128 )
scale = Vector2( 0.6, 0.6 )

[node name="ShopNode5" parent="ShopNodeManager" instance=ExtResource( 9 )]
position = Vector2( 512, 374 )
scale = Vector2( 0.6, 0.6 )

[node name="RerollCostDisplay" parent="ShopNodeManager" instance=ExtResource( 5 )]
margin_left = 134.0
margin_top = 486.0
margin_right = 278.0
margin_bottom = 526.0
initial_label_text = "Cost: 2"

[node name="PurchaseButton" parent="ShopNodeManager" instance=ExtResource( 8 )]
margin_left = 436.0
margin_top = 542.0
margin_right = 590.0
margin_bottom = 576.0
text = "Purchase"

[node name="Dice" type="Sprite" parent="ShopNodeManager"]
position = Vector2( 206, 423 )
texture = ExtResource( 4 )
hframes = 6
script = ExtResource( 10 )

[node name="Tween" type="Tween" parent="ShopNodeManager/Dice"]

[node name="CurrencyDisplay" parent="ShopNodeManager" instance=ExtResource( 6 )]

[node name="RerollButton" parent="." instance=ExtResource( 8 )]
margin_left = 129.0
margin_top = 542.0
margin_right = 283.0
margin_bottom = 576.0
text = "Reroll"

[node name="SkipArrow" type="TextureRect" parent="."]
margin_left = 752.0
margin_top = 437.0
margin_right = 880.0
margin_bottom = 565.0
rect_scale = Vector2( 1, 0.7 )
mouse_filter = 2
texture = ExtResource( 3 )

[node name="SkipButton" parent="." instance=ExtResource( 8 )]
margin_left = 741.0
margin_top = 542.0
margin_right = 895.0
margin_bottom = 576.0
text = "Skip"

[node name="ShopCardManager" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Card" parent="ShopCardManager" instance=ExtResource( 7 )]
position = Vector2( 128, 128 )

[node name="Card2" parent="ShopCardManager" instance=ExtResource( 7 )]
position = Vector2( 384, 128 )

[node name="Card3" parent="ShopCardManager" instance=ExtResource( 7 )]
position = Vector2( 640, 128 )

[node name="Card4" parent="ShopCardManager" instance=ExtResource( 7 )]
position = Vector2( 896, 128 )

[connection signal="transaction_made" from="ShopNodeManager" to="." method="_on_ShopNodeManager_transaction_made"]
[connection signal="pressed" from="ShopNodeManager/PurchaseButton" to="ShopNodeManager" method="_on_PurchaseButton_pressed"]
[connection signal="pressed" from="RerollButton" to="." method="_on_RerollButton_pressed"]
[connection signal="pressed" from="SkipButton" to="ShopNodeManager" method="_on_SkipButton_pressed"]
